--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "expo": "~53.0.9",
     "expo-camera": "~16.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.5",
+    "expo-media-library": "~17.1.6",
     "expo-notifications": "~0.31.2",
+    "expo-sensors": "~14.1.4",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -23,12 +29,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-splash-screen": "~0.30.8",
-    "expo-location": "~18.1.5",
-    "expo-media-library": "~17.1.6",
-    "expo-image-picker": "~16.1.4",
-    "expo-sensors": "~14.1.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
