--- a/app.json
+++ b/app.json
@@ -12,6 +12,8 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "scheme": "inventory-app",
+    "deepLinking": "true",
     "ios": {
       "supportsTablet": true
     },
