--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~53.0.9",
     "expo-camera": "~16.1.6",
     "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.5",
     "expo-location": "~18.1.5",
     "expo-media-library": "~17.1.6",
     "expo-notifications": "~0.31.2",
